syntax = "proto3";
package payment.event;

option go_package = "github.com/go-saas/kit/payment/event/v1;v1";

message SubscriptionChangedEvent{
  string id=1;
}
